[package]
name = "cspot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
reqwest = {version = "0.11.23", features = ["json"]}
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tabled = "0.15.0"
tokio = {version = "1.35.1", features = ["rt-multi-thread", "macros"]}
